k8s/01-hashrate-demo-webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashrate-demo-webui
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hashrate-demo-webui
  template:
    metadata:
      labels:
        app: hashrate-demo-webui
    spec:
      containers:
        - name: hashrate-demo-webui
          image: uhub.service.ucloud.cn/entropypool/hashrate-demo-webui:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: hashrate-demo-webui
  namespace: kube-system
spec:
  ports:
    - name: api
      port: 80
      targetPort: 80
  selector:
    app: hashrate-demo-webui
