k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hashrate-demo-webui-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: hashrate-demo-webui
    k8s.kuboard.cn/workload: hashrate-demo-webui
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-http-redirect-https-testing@kubernetescrd,
      kube-system-common-headers@kubernetescrd

spec:
  tls:
    - hosts:
        - '*.npool.top'
        - www.hashrate-demo.npool.top
      secretName: npool-top-tls
  rules:
    - host: www.hashrate-demo.npool.top
      http:
        paths:
          - path: /
            backend:
              serviceName: hashrate-demo-webui
              servicePort: 80
    - host: www.hashrate-demo.npool.top
      http:
        paths:
          - path: /
            backend:
              serviceName: hashrate-demo-webui
              servicePort: 80
